# ClimateModel

./: CMakeLists.txt  README.md
include/core/: coordHandler.h  dataScanner.h  fileReader.h
include/glad/: glad.h
include/renderLogic/: render.h
lib/: glfw3.lib
src/: coordHandler.cpp  dataScanner.cpp  fileReader.cpp  glad.c  main.cpp
src/renderLogic/: fragmentShader.frag  render.cpp  vertexShader.vert
